<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/hint_bp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/hint_bp651"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/label_sys"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            app:layout_constraintBaseline_toBaselineOf="@+id/value_sys"
            app:layout_constraintStart_toStartOf="@+id/hint_bp" />

        <TextView
            android:id="@+id/value_sys"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/label_empty"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/barrier1"
            app:layout_constraintTop_toBottomOf="@+id/hint_bp"
            tools:text="22" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/units_press"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/value_sys"
            app:layout_constraintStart_toEndOf="@+id/value_sys" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/label_dia"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            app:layout_constraintBaseline_toBaselineOf="@+id/value_dia"
            app:layout_constraintStart_toStartOf="@+id/textView3" />

        <TextView
            android:id="@+id/value_dia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/label_empty"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/barrier1"
            app:layout_constraintTop_toBottomOf="@+id/value_sys"
            tools:text="33" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/units_press"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/value_dia"
            app:layout_constraintStart_toEndOf="@+id/value_dia" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/label_hr"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            app:layout_constraintBaseline_toBaselineOf="@+id/value_hr"
            app:layout_constraintStart_toStartOf="@+id/textView5" />

        <TextView
            android:id="@+id/value_hr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/label_empty"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/barrier1"
            app:layout_constraintTop_toBottomOf="@+id/value_dia"
            tools:text="44" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/units_hr"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@+id/value_hr"
            app:layout_constraintStart_toEndOf="@+id/value_hr" />


        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/label_error"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:visibility="gone"
            app:layout_constraintBaseline_toBaselineOf="@+id/value_code"
            app:layout_constraintStart_toStartOf="@+id/textView7" />

        <TextView
            android:id="@+id/value_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/label_empty"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/barrier1"
            app:layout_constraintTop_toBottomOf="@+id/value_hr"
            tools:text="0" />


        <TextView
            android:id="@+id/timestamp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="24dp"
            android:text="@string/label_timestamp"
            android:textAppearance="@style/TextAppearance.MyTheme.Body1"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/value_code"
            tools:text="Last measurement taken at 23:22" />

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="end"
            app:constraint_referenced_ids="textView3, textView5, textView7, textView9"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>